--- a/sesion6/reto2/inventario/src/main/resources/application.properties
+++ b/sesion6/reto2/inventario/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=inventario
 # Configuración de la aplicación
-spring.application.name=nesflis
+spring.application.name=inventariodb
 
 # Configuración de la conexión
 
 #crear base de datos en memoria llamada neslfis
-spring.datasource.url=jdbc:h2:mem:nesflis
+spring.datasource.url=jdbc:h2:mem:inventariodb
 #cual es el driver para h2 en particular
 spring.datasource.driver-class-name=org.h2.Driver
 #usuario y contraseña por defecto
